# semantic-gui-control

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: blunt-win.md  spike.md
docs/: adr-0001-cross-platform-first.md  affordance-model.md  architecture-overview.md  command-vocabulary.md  cross-platform-strategy.md  development-sequence.md  github-issues-seed.md  handoff-phase-3-planning.md  level-1-spec.md  open-questions.md  phase-0-observe-spike.md  phase-1-normalize-spike.md  phase-2-find-read-spike.md  phase-3-act-verify-risk-spike.md  project-thesis.md  risk-model.md  roadmap-blunt-wins.md  use-cases.md  windows-claude-setup.md  windows-handoff-prompt-phase-2.md
docs/decisions/: ADR-0001-cross-platform-core-windows-first-spike.md
scripts/: bootstrap-local.sh
sgcl/: __init__.py  cli.py
sgcl/core/: adapter_base.py  confidence.py  icon_glyphs.py  matcher.py  read_result.py  schema.py  synonyms.py
spikes/: find-read-results.md  normalize-results.md  windows-observer-results.md
spikes/samples/: 01-windows.json  02-active-notepad.json  03-inspect-notepad-d3.json  04-active-calculator.json  05-inspect-calculator-d3.json  06-notepad-d3.json  07-calculator-d3.json  08-windows-run2.json  09-calculator-d8.json  10-windows-phase1.json  11-windows-phase1-filtered.json  12-notepad-phase1-d3.json  13-calculator-phase1-d8.json  (+9 more)
tasks/: todo.md
tests/: conftest.py  test_cli.py  test_confidence.py  test_icon_glyphs.py  test_matcher.py  test_readers.py  test_schema.py  test_synonyms.py  test_walker.py
(+5 files in other folders)
