[project]
name = "sgcl"
version = "0.0.0"
description = "Semantic GUI Control Layer — text-first agent interface for GUIs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
windows = [
    "uiautomation>=2.0; sys_platform == 'win32'",
]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "black>=24",
    "pre-commit>=3",
]

[project.scripts]
sgcl = "sgcl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sgcl"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
